
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
struct ahd_softc {int dummy; } ;


 int ahd_index_busy_tcl (struct ahd_softc*,int *,int ) ;
 int ahd_outw (struct ahd_softc*,int ,int ) ;
 int ahd_set_scbptr (struct ahd_softc*,int ) ;

__attribute__((used)) static void
ahd_busy_tcl(struct ahd_softc *ahd, u_int tcl, u_int scbid)
{
 u_int scb_offset;
 u_int saved_scbptr;

 scb_offset = ahd_index_busy_tcl(ahd, &saved_scbptr, tcl);
 ahd_outw(ahd, scb_offset, scbid);
 ahd_set_scbptr(ahd, saved_scbptr);
}
