; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_busy_tcl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/aic7xxx/extr_aic79xx_core.c_ahd_busy_tcl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ahd_softc*, i32, i32)* @ahd_busy_tcl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ahd_busy_tcl(%struct.ahd_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ahd_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ahd_softc* %0, %struct.ahd_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @ahd_index_busy_tcl(%struct.ahd_softc* %9, i32* %8, i32 %10)
  store i32 %11, i32* %7, align 4
  %12 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @ahd_outw(%struct.ahd_softc* %12, i32 %13, i32 %14)
  %16 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @ahd_set_scbptr(%struct.ahd_softc* %16, i32 %17)
  ret void
}

declare dso_local i32 @ahd_index_busy_tcl(%struct.ahd_softc*, i32*, i32) #1

declare dso_local i32 @ahd_outw(%struct.ahd_softc*, i32, i32) #1

declare dso_local i32 @ahd_set_scbptr(%struct.ahd_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
